# rppico-scope

./: .gitignore  FRONTEND_CIRCUIT.md  FSD.md  INSTALL.md  LICENSE  README.md
docs/: HOSTING.md  STATUS.md  UNATTENDED_PLAN.md
firmware/: CMakeLists.txt  README.md
firmware/src/: CMakeLists.txt  main.c  project_config.h  protocol_engine.c  protocol_engine.h  protocol_v1_crc.c  tusb_config.h  usb_descriptors.c
protocol/: PROTOCOL_V1.md
protocol/include/: protocol_v1.h
viewer/: CMakeLists.txt  README.md
viewer/src/: DeviceSession.cpp  DeviceSession.h  MainWindow.cpp  MainWindow.h  ProtocolCodec.cpp  ProtocolCodec.h
